Draw points from k_iteration on graph