@@ -8,14 +8,24 @@ public abstract class Simulation {
 	protected int dimension;
 	protected double sigma_0; // odchylenie standardowe
 	protected int iterationsLimit;
+	protected double [] results;
 	
 	public abstract void firstGeneration();
 	public abstract void nextGeneration();
 	public abstract boolean checkFinish();
 	public abstract void runSimulation();
 	
+	
 	public Individual selectBest(){
 		Collections.sort(populationP.getIndividuals(), new MyComparator());
-		return populationP.getIndividuals().get(0);
+		return populationP.getIndividuals().getFirst();
+	}
+	
+	public void updateResultsArray(){
+		results[kIterations] = selectBest().getFinalFunctionValue();
+	}
+	
+	public double [] getResults(){
+		return results;
 	}
 }
